--- a/DebtsProject/nbproject/project.properties
+++ b/DebtsProject/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DebtsProject
+application.vendor=nx
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/DebtsProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DebtsProject
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=X:\\MATKUL\\sem.4\\prak. pbo\\asisten-prak-pbo-8-mvc-main\\TOOLS_YANG_DIBUTUHKAN\\mysql-connector-j-8.3.0.jar
 includes=**
