--- a/DebtsProject/nbproject/project.properties
+++ b/DebtsProject/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/DebtsProject
 endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.3.0.jar=X:\\MATKUL\\sem.4\\prak. pbo\\asisten-prak-pbo-8-mvc-main\\TOOLS_YANG_DIBUTUHKAN\\mysql-connector-j-8.3.0.jar
+file.reference.mysql-connector-j-8.3.0__1_.jar=C:\\College\\PraKPBO\\mysql-connector-j-8.3.0 (1).jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.mysql-connector-j-8.3.0__1_.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
